# ComponentSegrigator

./: AddExecutionTimeToProf.sh  CMakeLists.txt  Comparecsv.py  FileProcessor.cpp  HowToRun.txt  LargeUnsignedInts.cpp  LargeUnsignedInts.h  README.md  V2AddExecutionTimeToProf.sh
